eagle_test/error/dict_error.eagle
var d = {1: 2, 3: 4};
print d[5];
// expected: [RuntimeError at line 2] Dict does not have key: 5